added MyCoursesPage and MyCoursePage