@@ -5,6 +5,7 @@ import org.example.apexams.courses.dto.CourseDetailsResponse;
 import org.example.apexams.courses.dto.CourseResponse;
 import org.example.apexams.courses.dto.CourseWithProgressResponse;
 import org.example.apexams.courses.entity.CourseEntity;
+import org.example.apexams.courses.service.CourseProgressService;
 import org.example.apexams.courses.service.CourseService;
 import org.example.apexams.enrollments.dto.EnrollmentResponse;
 import org.example.apexams.enrollments.entity.EnrollmentEntity;
@@ -12,9 +13,7 @@ import org.example.apexams.enrollments.entity.enums.EnrollmentStatus;
 import org.example.apexams.enrollments.repo.EnrollmentRepository;
 import org.example.apexams.enrollments.service.EnrollmentService;
 import org.example.apexams.lessonProgress.dto.LessonProgressResponse;
-import org.example.apexams.lessonProgress.entity.LessonProgressEntity;
 import org.example.apexams.lessonProgress.entity.enums.LessonProgressStatus;
-import org.example.apexams.lessonProgress.repo.LessonProgressRepository;
 import org.example.apexams.lessonProgress.service.LessonProgressService;
 import org.example.apexams.lessons.dto.LessonWithProgressResponse;
 import org.example.apexams.lessons.entity.LessonEntity;
@@ -23,11 +22,9 @@ import org.example.apexams.units.dto.UnitWithLessonsResponse;
 import org.example.apexams.units.entity.UnitEntity;
 import org.example.apexams.units.repo.UnitRepository;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -37,71 +34,41 @@ public class StudentCourseServiceImpl implements StudentCourseService {
     private final CourseService courseService;
     private final EnrollmentRepository enrollmentRepository;
     private final LessonRepository lessonRepository;
-    private final LessonProgressRepository lessonProgressRepository;
     private final LessonProgressService lessonProgressService;
     private final UnitRepository unitRepository;
+    private final CourseProgressService courseProgressService;
 
     @Override
-    public List<CourseResponse> getCoursesByUser(UUID uuid) {
-        List<EnrollmentResponse> enrollments = enrollmentService.getUserEnrollments(uuid);
-        return courseService.getCoursesByIds(enrollments.stream()
-                .filter(enrollment -> enrollment.status() == EnrollmentStatus.ACTIVE)
-                .map(EnrollmentResponse::courseId)
-                .collect(Collectors.toList()));
+    @Transactional(readOnly = true)
+    public List<CourseWithProgressResponse> getCoursesByUser(UUID userId) {
+        List<EnrollmentEntity> enrollments = enrollmentRepository.findAllByUserId(userId)
+                .stream()
+                .filter(e -> e.getStatus() == EnrollmentStatus.ACTIVE)
+                .toList();
+
+        return courseProgressService.calculateProgressForEnrollments(enrollments, userId);
     }
 
     @Override
-    public CourseResponse getCourseById(UUID uuid, UUID courseId) {
-        EnrollmentResponse enrollmentResponse = enrollmentService.getEnrollment(uuid, courseId).orElseThrow(() -> new RuntimeException("Enrollment not found"));
+    public CourseResponse getCourseById(UUID userId, UUID courseId) {
+        EnrollmentResponse enrollmentResponse = enrollmentService.getEnrollment(userId, courseId)
+                .orElseThrow(() -> new RuntimeException("Enrollment not found"));
         return courseService.getCourse(enrollmentResponse.courseId());
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<CourseWithProgressResponse> getCoursesWithProgress(UUID userId) {
         List<EnrollmentEntity> enrollments = enrollmentRepository.findAllByUserId(userId)
                 .stream()
                 .filter(e -> e.getStatus() == EnrollmentStatus.ACTIVE)
                 .toList();
 
-        return enrollments.stream()
-                .map(enrollment -> {
-                    CourseEntity course = enrollment.getCourse();
-
-                    List<LessonEntity> allLessons = lessonRepository.findByUnitIdOrderByOrderIndex(course.getId());
-                    int totalLessons = allLessons.size();
-
-                    List<LessonProgressEntity> completedLessons = lessonProgressRepository.findAllByUserId(userId)
-                            .stream()
-                            .filter(p -> p.getStatus() == LessonProgressStatus.COMPLETED)
-                            .filter(p -> allLessons.stream().anyMatch(m -> m.getId().equals(p.getLesson().getId())))
-                            .toList();
-
-                    int completed = completedLessons.size();
-                    double progressPercentage = totalLessons > 0 ? (completed * 100.0 / totalLessons) : 0.0;
-
-                    LessonProgressEntity lastAccessed = lessonProgressRepository.findAllByUserId(userId)
-                            .stream()
-                            .filter(p -> allLessons.stream().anyMatch(m -> m.getId().equals(p.getLesson().getId())))
-                            .max(Comparator.comparing(LessonProgressEntity::getId))
-                            .orElse(null);
-
-                    return new CourseWithProgressResponse(
-                            course.getId(),
-                            course.getTitle(),
-                            course.getSlug(),
-                            course.getCoverUrl(),
-                            enrollment.getTier(),
-                            totalLessons,
-                            completed,
-                            progressPercentage,
-                            lastAccessed != null ? lastAccessed.getLesson().getId() : null,
-                            lastAccessed != null ? lastAccessed.getLesson().getTitle() : null
-                    );
-                })
-                .collect(Collectors.toList());
+        return courseProgressService.calculateProgressForEnrollments(enrollments, userId);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public CourseDetailsResponse getCourseWithUnits(UUID userId, UUID courseId) {
         // Проверка доступа
         if (!enrollmentService.hasAccess(userId, courseId)) {
@@ -113,56 +80,26 @@ public class StudentCourseServiceImpl implements StudentCourseService {
         // Получаем все units курса
         List<UnitEntity> units = unitRepository.findByCourseIdOrderByOrderIndex(courseId);
 
-        // Получаем прогресс пользователя по всем урокам
+        if (units.isEmpty()) {
+            return createEmptyCourseDetails(course);
+        }
+
+        // Получаем все unitIds
+        List<UUID> unitIds = units.stream().map(UnitEntity::getId).toList();
+
+        // Batch загрузка всех lessons одним запросом
+        Map<UUID, List<LessonEntity>> lessonsByUnit = lessonRepository.findByUnitIds(unitIds)
+                .stream()
+                .collect(Collectors.groupingBy(l -> l.getUnit().getId()));
+
+        // Получаем прогресс пользователя одним запросом
         Map<UUID, LessonProgressResponse> progressMap = lessonProgressService.getUserProgress(userId)
                 .stream()
-                .collect(Collectors.toMap(LessonProgressResponse::lessonId, p -> p));
+                .collect(Collectors.toMap(LessonProgressResponse::lessonId, p -> p, (p1, p2) -> p1));
 
+        // Формируем units с прогрессом
         List<UnitWithLessonsResponse> unitsWithProgress = units.stream()
-                .map(unit -> {
-                    // Получаем уроки unit
-                    List<LessonEntity> lessons = lessonRepository.findByUnitIdOrderByOrderIndex(unit.getId());
-
-                    // Формируем уроки с прогрессом
-                    List<LessonWithProgressResponse> lessonsWithProgress = lessons.stream()
-                            .map(lesson -> {
-                                LessonProgressResponse progress = progressMap.get(lesson.getId());
-                                return new LessonWithProgressResponse(
-                                        lesson.getId(),
-                                        lesson.getUnit().getId(),
-                                        lesson.getTitle(),
-                                        lesson.getOrderIndex(),
-                                        lesson.getReleaseAt(),
-                                        progress != null ? progress.status() : LessonProgressStatus.NOT_STARTED,
-                                        progress != null ? progress.completedAt() : null
-                                );
-                            })
-                            .toList();
-
-                    // Считаем прогресс unit
-                    int totalLessons = lessonsWithProgress.size();
-                    int completedLessons = (int) lessonsWithProgress.stream()
-                            .filter(l -> l.progressStatus() == LessonProgressStatus.COMPLETED)
-                            .count();
-                    double progressPercentage = totalLessons > 0 ? (completedLessons * 100.0 / totalLessons) : 0.0;
-
-                    return new UnitWithLessonsResponse(
-                            unit.getId(),
-                            unit.getCourse().getId(),
-                            unit.getTitle(),
-                            unit.getSnippet(),
-                            unit.getDescription(),
-                            unit.getIconUrl(),
-                            unit.getOrderIndex(),
-                            unit.getIsPublished(),
-                            unit.getCreatedAt(),
-                            unit.getUpdatedAt(),
-                            lessonsWithProgress,
-                            totalLessons,
-                            completedLessons,
-                            progressPercentage
-                    );
-                })
+                .map(unit -> buildUnitWithProgress(unit, lessonsByUnit, progressMap))
                 .toList();
 
         return new CourseDetailsResponse(
@@ -179,4 +116,74 @@ public class StudentCourseServiceImpl implements StudentCourseService {
         );
     }
 
+    private UnitWithLessonsResponse buildUnitWithProgress(
+            UnitEntity unit,
+            Map<UUID, List<LessonEntity>> lessonsByUnit,
+            Map<UUID, LessonProgressResponse> progressMap
+    ) {
+        // Получаем уроки unit из кэша
+        List<LessonEntity> lessons = lessonsByUnit.getOrDefault(unit.getId(), Collections.emptyList());
+
+        // Формируем уроки с прогрессом
+        List<LessonWithProgressResponse> lessonsWithProgress = lessons.stream()
+                .map(lesson -> buildLessonWithProgress(lesson, progressMap))
+                .toList();
+
+        // Считаем прогресс unit
+        int totalLessons = lessonsWithProgress.size();
+        int completedLessons = (int) lessonsWithProgress.stream()
+                .filter(l -> l.progressStatus() == LessonProgressStatus.COMPLETED)
+                .count();
+        double progressPercentage = totalLessons > 0
+                ? Math.round(completedLessons * 100.0 / totalLessons * 100.0) / 100.0
+                : 0.0;
+
+        return new UnitWithLessonsResponse(
+                unit.getId(),
+                unit.getCourse().getId(),
+                unit.getTitle(),
+                unit.getSnippet(),
+                unit.getDescription(),
+                unit.getIconUrl(),
+                unit.getOrderIndex(),
+                unit.getIsPublished(),
+                unit.getCreatedAt(),
+                unit.getUpdatedAt(),
+                lessonsWithProgress,
+                totalLessons,
+                completedLessons,
+                progressPercentage
+        );
+    }
+
+    private LessonWithProgressResponse buildLessonWithProgress(
+            LessonEntity lesson,
+            Map<UUID, LessonProgressResponse> progressMap
+    ) {
+        LessonProgressResponse progress = progressMap.get(lesson.getId());
+        return new LessonWithProgressResponse(
+                lesson.getId(),
+                lesson.getUnit().getId(),
+                lesson.getTitle(),
+                lesson.getOrderIndex(),
+                lesson.getReleaseAt(),
+                progress != null ? progress.status() : LessonProgressStatus.NOT_STARTED,
+                progress != null ? progress.completedAt() : null
+        );
+    }
+
+    private CourseDetailsResponse createEmptyCourseDetails(CourseResponse course) {
+        return new CourseDetailsResponse(
+                course.id(),
+                course.title(),
+                course.slug(),
+                course.description(),
+                course.snippet(),
+                course.previewVideoUrl(),
+                course.coverUrl(),
+                course.status(),
+                course.discordInviteUrl(),
+                Collections.emptyList()
+        );
+    }
 }
